force-app/main/default/objects/Inventory__c/fields/AgeMonths__c.field-meta.xml
<CustomField>
    <fullName>AgeMonths__c</fullName>
    <formula>(YEAR( TODAY())*12+MONTH(TODAY())) - (YEAR( PurchaseDate__c )*12+MONTH(PurchaseDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>