force-app/main/default/objects/Inventory__c/fields/AgeYear__c.field-meta.xml
<CustomField>
    <fullName>AgeYear__c</fullName>
    <formula>IF(
 AgeMonths__c &lt;13,1,
IF(
 AgeMonths__c &lt;25,2,
IF(
 AgeMonths__c &lt;37,3,
IF(
 AgeMonths__c &lt;49,4,
IF(
 AgeMonths__c &lt;61,5,
IF(
 AgeMonths__c &lt;73,6,
IF(
 AgeMonths__c &lt;85,7,
IF(
AgeMonths__c &lt;97,8,9)
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>