force-app/main/default/objects/Inventory__c/fields/ApplicationService__c.field-meta.xml
<CustomField>
    <fullName>ApplicationService__c</fullName>
    <label>Application / Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>