force-app/main/default/objects/Inventory__c/fields/ArticleDescription__c.field-meta.xml
<CustomField>
    <fullName>ArticleDescription__c</fullName>
    <label>Article Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>