force-app/main/default/objects/Inventory__c/fields/ArticleNr__c.field-meta.xml
<CustomField>
    <fullName>ArticleNr__c</fullName>
    <label>Article Nr.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>