force-app/main/default/objects/Inventory__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <label>Asset Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>