force-app/main/default/objects/Inventory__c/fields/BadgeAccess__c.field-meta.xml
<CustomField>
    <fullName>BadgeAccess__c</fullName>
    <description>Not used for now. Access Information in Key Management System. ary, 06.11.2014</description>
    <label>Badge Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>General (All Access)</fullName>
            </value>
            <value>
                <fullName>Hieronymus</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HR / Wine Cellar</fullName>
            </value>
            <value>
                <fullName>Recording Studio</fullName>
            </value>
            <value>
                <fullName>Server Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>