force-app/main/default/objects/Inventory__c/fields/BadgeNr__c.field-meta.xml
<CustomField>
    <fullName>BadgeNr__c</fullName>
    <label>Badge Nr.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>