force-app/main/default/objects/Inventory__c/fields/BookTitle__c.field-meta.xml
<CustomField>
    <fullName>BookTitle__c</fullName>
    <label>Book Title</label>
    <type>TextArea</type>
</CustomField>