force-app/main/default/objects/Inventory__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>Car</label>
    <length>100</length>
    <type>Text</type>
</CustomField>