force-app/main/default/objects/Inventory__c/fields/CarCurrency__c.field-meta.xml
<CustomField>
    <fullName>CarCurrency__c</fullName>
    <label>Car Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalCurrency</valueSetName>
    </valueSet>
</CustomField>