force-app/main/default/objects/Inventory__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <description>Unique device name (company network)</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique device name (company network)</inlineHelpText>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>