force-app/main/default/objects/Inventory__c/fields/CodeStaffNr__c.field-meta.xml
<CustomField>
    <fullName>CodeStaffNr__c</fullName>
    <label>Code (Staff Nr.)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>