force-app/main/default/objects/Inventory__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <inlineHelpText>Username, Access Name</inlineHelpText>
    <label>Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>