force-app/main/default/objects/Inventory__c/fields/CredentialActive__c.field-meta.xml
<CustomField>
    <fullName>CredentialActive__c</fullName>
    <formula>AND(
ValidFromDate__c&lt;today(),
OR(
ValidIUntilDate__c&gt;today(),
ISBLANK(ValidIUntilDate__c)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credential Active</label>
    <type>Checkbox</type>
</CustomField>