force-app/main/default/objects/Inventory__c/fields/CreditCard__c.field-meta.xml
<CustomField>
    <fullName>CreditCard__c</fullName>
    <label>Credit Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>