force-app/main/default/objects/Inventory__c/fields/CreditCardNrLast4Digits__c.field-meta.xml
<CustomField>
    <fullName>CreditCardNrLast4Digits__c</fullName>
    <label>Credit Card Nr. (Last 4 Digits)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>