force-app/main/default/objects/Inventory__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Device</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Inventory__c.RecordType.Id</field>
            <operation>equals</operation>
            <value>012b0000000cUpm</value>
        </filterItems>
        <filterItems>
            <field>Inventory__c.RecordType.Id</field>
            <operation>equals</operation>
            <value>012b0000000cUpX</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>