force-app/main/default/objects/Inventory__c/fields/Disk__c.field-meta.xml
<CustomField>
    <fullName>Disk__c</fullName>
    <label>Disk</label>
    <length>100</length>
    <type>Text</type>
</CustomField>