force-app/main/default/objects/Inventory__c/fields/DiskTypeSSD__c.field-meta.xml
<CustomField>
    <fullName>DiskTypeSSD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disk Type SSD</label>
    <type>Checkbox</type>
</CustomField>