force-app/main/default/objects/Inventory__c/fields/DistanceCompensation__c.field-meta.xml
<CustomField>
    <fullName>DistanceCompensation__c</fullName>
    <label>Distance - Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>