force-app/main/default/objects/Inventory__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Distribution)</relationshipLabel>
    <relationshipName>Inventory2</relationshipName>
    <type>Lookup</type>
</CustomField>