force-app/main/default/objects/Inventory__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <label>Edition</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>