force-app/main/default/objects/Inventory__c/fields/EditionYear__c.field-meta.xml
<CustomField>
    <fullName>EditionYear__c</fullName>
    <label>Edition Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>