force-app/main/default/objects/Inventory__c/fields/HandoutDate__c.field-meta.xml
<CustomField>
    <fullName>HandoutDate__c</fullName>
    <label>Handout (Date)</label>
    <type>Date</type>
</CustomField>