force-app/main/default/objects/Inventory__c/fields/IMEINr__c.field-meta.xml
<CustomField>
    <fullName>IMEINr__c</fullName>
    <label>IMEI Nr.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>