force-app/main/default/objects/Inventory__c/fields/InstalledInfrastructure__c.field-meta.xml
<CustomField>
    <fullName>InstalledInfrastructure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Infrastructure</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory (Installed Infrastructure)</relationshipLabel>
    <relationshipName>Inventory8</relationshipName>
    <type>Lookup</type>
</CustomField>