force-app/main/default/objects/Inventory__c/fields/InstanceLevel__c.field-meta.xml
<CustomField>
    <fullName>InstanceLevel__c</fullName>
    <label>Instance Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox / Develop</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>