force-app/main/default/objects/Inventory__c/fields/InventoryName__c.field-meta.xml
<CustomField>
    <fullName>InventoryName__c</fullName>
    <formula>CASE( RecordType.DeveloperName , &quot;Car&quot;, Car__c, &quot;CreditCards&quot;, CreditCard__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Name</label>
    <type>Text</type>
</CustomField>