force-app/main/default/objects/Inventory__c/fields/IPAddressExternal__c.field-meta.xml
<CustomField>
    <fullName>IPAddressExternal__c</fullName>
    <label>IP Address (External)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>