force-app/main/default/objects/Inventory__c/fields/IPAddressInternal__c.field-meta.xml
<CustomField>
    <fullName>IPAddressInternal__c</fullName>
    <label>IP Address (Internal)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>