force-app/main/default/objects/Inventory__c/fields/IPEINr__c.field-meta.xml
<CustomField>
    <fullName>IPEINr__c</fullName>
    <label>IPEI Nr.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>