force-app/main/default/objects/Inventory__c/fields/KeyNr__c.field-meta.xml
<CustomField>
    <fullName>KeyNr__c</fullName>
    <label>Key Nr.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>