force-app/main/default/objects/Inventory__c/fields/LabeledInventoryId__c.field-meta.xml
<CustomField>
    <fullName>LabeledInventoryId__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Device has a new label sticker with the Skywalk Inventory Id (IN-xxxxxx).</inlineHelpText>
    <label>Labeled (Inventory Id)</label>
    <type>Checkbox</type>
</CustomField>