force-app/main/default/objects/Inventory__c/fields/LanSweeperAssetId__c.field-meta.xml
<CustomField>
    <fullName>LanSweeperAssetId__c</fullName>
    <description>The unique Id assigned by Lan Sweeper (http://inventory:81) to assets found on the network.</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique Id assigned by Lan Sweeper to assets found on the network.</inlineHelpText>
    <label>LanSweeper (Asset Id)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>