force-app/main/default/objects/Inventory__c/fields/LanSweeperLink__c.field-meta.xml
<CustomField>
    <fullName>LanSweeperLink__c</fullName>
    <description>Direct Link to Lan Sweeper&apos;s device detail page (if available)</description>
    <formula>if (
  or (  ISBLANK(LanSweeperAssetId__c),  ISNULL(LanSweeperAssetId__c) ),
  &quot;n/a&quot;,
  HYPERLINK(&quot;http://inventory:81/asset.aspx?AssetID=&quot; &amp; LanSweeperAssetId__c, &quot;Asset #&quot; &amp; LanSweeperAssetId__c, &quot;_lanSweeperDetail&quot;)
)</formula>
    <inlineHelpText>Direct Link to Lan Sweeper&apos;s device detail page (if available)</inlineHelpText>
    <label>LanSweeper (Link)</label>
    <type>Text</type>
</CustomField>