force-app/main/default/objects/Inventory__c/fields/LastServiceDate__c.field-meta.xml
<CustomField>
    <fullName>LastServiceDate__c</fullName>
    <label>Last Service (Date)</label>
    <type>Date</type>
</CustomField>