force-app/main/default/objects/Inventory__c/fields/LastServiceDetails__c.field-meta.xml
<CustomField>
    <fullName>LastServiceDetails__c</fullName>
    <label>Last Service Details</label>
    <type>TextArea</type>
</CustomField>