force-app/main/default/objects/Inventory__c/fields/LevelOfAccess__c.field-meta.xml
<CustomField>
    <fullName>LevelOfAccess__c</fullName>
    <label>Level of Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard User</fullName>
            </value>
            <value>
                <fullName>Super User</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>..</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>