force-app/main/default/objects/Inventory__c/fields/LicenseKey__c.field-meta.xml
<CustomField>
    <fullName>LicenseKey__c</fullName>
    <label>License Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>