force-app/main/default/objects/Inventory__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>