force-app/main/default/objects/Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Calydo</fullName>
            </value>
            <value>
                <fullName>CTP</fullName>
            </value>
            <value>
                <fullName>Druckerraum</fullName>
            </value>
            <value>
                <fullName>Empfang</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>gateB</fullName>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>HBC</fullName>
            </value>
            <value>
                <fullName>Hieronymus</fullName>
            </value>
            <value>
                <fullName>HR/OM</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Keller</fullName>
            </value>
            <value>
                <fullName>Spedition</fullName>
            </value>
            <value>
                <fullName>Verlag</fullName>
            </value>
            <value>
                <fullName>VH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>