force-app/main/default/objects/Inventory__c/fields/MacTracker__c.field-meta.xml
<CustomField>
    <fullName>MacTracker__c</fullName>
    <formula>HYPERLINK(
&quot;https://selfsolve.apple.com/wcResults.do?num=0&amp;sn=&quot;&amp; SerialNr__c, &quot;Lookup Apple Device&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MacTracker</label>
    <type>Text</type>
</CustomField>