force-app/main/default/objects/Inventory__c/fields/MaintenancePlan__c.field-meta.xml
<CustomField>
    <fullName>MaintenancePlan__c</fullName>
    <description>Reihenfolge für die Serverwartung</description>
    <label>Maintenance Plan</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>