force-app/main/default/objects/Inventory__c/fields/ManagedSwitch__c.field-meta.xml
<CustomField>
    <fullName>ManagedSwitch__c</fullName>
    <label>Managed Switch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VHAG-STI-C2K-01</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-02</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-03</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-04</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-05</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-06</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-07</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-08</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-09</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-10</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-11</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-12</fullName>
            </value>
            <value>
                <fullName>VHAG-STI-C2K-13</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>