force-app/main/default/objects/Inventory__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Belinea</fullName>
            </value>
            <value>
                <fullName>BenQ</fullName>
            </value>
            <value>
                <fullName>Brentford</fullName>
            </value>
            <value>
                <fullName>Canon</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Compaq</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Eizo</fullName>
            </value>
            <value>
                <fullName>Epson</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>HTC</fullName>
            </value>
            <value>
                <fullName>Konica</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>Nokia</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Sony</fullName>
            </value>
            <value>
                <fullName>VMWare</fullName>
            </value>
            <value>
                <fullName>Xerox</fullName>
            </value>
            <value>
                <fullName>Xiaomi</fullName>
            </value>
            <value>
                <fullName>Zebra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>