force-app/main/default/objects/Inventory__c/fields/MyDeviceDoesNotHaveAClientSticker__c.field-meta.xml
<CustomField>
    <fullName>MyDeviceDoesNotHaveAClientSticker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check the box if your device does NOT have the sticker with the client number (e.g. mc-client_006. By laptops it&apos;s normally on the left side of the keyboard)</inlineHelpText>
    <label>My Device does NOT have a client sticker</label>
    <type>Checkbox</type>
</CustomField>