force-app/main/default/objects/Inventory__c/fields/NameCity__c.field-meta.xml
<CustomField>
    <fullName>NameCity__c</fullName>
    <label>Name (City)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>