force-app/main/default/objects/Inventory__c/fields/OldName__c.field-meta.xml
<CustomField>
    <fullName>OldName__c</fullName>
    <label>Old Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>