force-app/main/default/objects/Inventory__c/fields/OperationSystemVersion__c.field-meta.xml
<CustomField>
    <fullName>OperationSystemVersion__c</fullName>
    <label>Operation System Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>