force-app/main/default/objects/Inventory__c/fields/PatchNr__c.field-meta.xml
<CustomField>
    <fullName>PatchNr__c</fullName>
    <label>Patch Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>