force-app/main/default/objects/Inventory__c/fields/PIN2__c.field-meta.xml
<CustomField>
    <fullName>PIN2__c</fullName>
    <label>PIN 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>