force-app/main/default/objects/Inventory__c/fields/PrintOptions__c.field-meta.xml
<CustomField>
    <fullName>PrintOptions__c</fullName>
    <label>Print Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black / White</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Scanner</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Tacking</fullName>
            </value>
            <value>
                <fullName>Etiquette-Printer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>