force-app/main/default/objects/Inventory__c/fields/PrivateCar__c.field-meta.xml
<CustomField>
    <fullName>PrivateCar__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Private Car</label>
    <type>Checkbox</type>
</CustomField>