force-app/main/default/objects/Inventory__c/fields/PUK1__c.field-meta.xml
<CustomField>
    <fullName>PUK1__c</fullName>
    <label>PUK 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>