force-app/main/default/objects/Inventory__c/fields/PUK2__c.field-meta.xml
<CustomField>
    <fullName>PUK2__c</fullName>
    <label>PUK 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>