force-app/main/default/objects/Inventory__c/fields/PurchaseLimit__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLimit__c</fullName>
    <label>Purchase Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>