force-app/main/default/objects/Inventory__c/fields/RegistrationNr__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNr__c</fullName>
    <label>Registration Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>