force-app/main/default/objects/Inventory__c/fields/ReturnedDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnedDate__c</fullName>
    <label>Returned (Date)</label>
    <type>Date</type>
</CustomField>