force-app/main/default/objects/Inventory__c/fields/SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>SalesPrice__c</fullName>
    <label>Sales Price</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>