force-app/main/default/objects/Inventory__c/fields/ScreenResolution__c.field-meta.xml
<CustomField>
    <fullName>ScreenResolution__c</fullName>
    <description>Resolution in pixels (width x height)</description>
    <inlineHelpText>Resolution in pixels (width x height)</inlineHelpText>
    <label>Screen Resolution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>