force-app/main/default/objects/Inventory__c/fields/ScreenSize__c.field-meta.xml
<CustomField>
    <fullName>ScreenSize__c</fullName>
    <description>Size in inches (Zoll)</description>
    <inlineHelpText>Size in inches (Zoll)</inlineHelpText>
    <label>Screen Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>