force-app/main/default/objects/Inventory__c/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <inlineHelpText>Number of Licenses / Users / Access Allowance</inlineHelpText>
    <label>Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>