force-app/main/default/objects/Inventory__c/fields/SerialNr__c.field-meta.xml
<CustomField>
    <fullName>SerialNr__c</fullName>
    <label>Serial Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>