force-app/main/default/objects/Inventory__c/fields/ServerLocation__c.field-meta.xml
<CustomField>
    <fullName>ServerLocation__c</fullName>
    <label>Server Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inhouse</fullName>
            </value>
            <value>
                <fullName>iTrust</fullName>
            </value>
            <value>
                <fullName>WIDE</fullName>
            </value>
            <value>
                <fullName>extern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>