force-app/main/default/objects/Inventory__c/fields/ShortNr__c.field-meta.xml
<CustomField>
    <fullName>ShortNr__c</fullName>
    <label>Short Nr.</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>