force-app/main/default/objects/Inventory__c/fields/SIMNr__c.field-meta.xml
<CustomField>
    <fullName>SIMNr__c</fullName>
    <label>SIM Nr.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>