force-app/main/default/objects/Inventory__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <label>Sold To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>