force-app/main/default/objects/Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>In Use</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>In Home Office</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Not Returned</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>