force-app/main/default/objects/Inventory__c/fields/Subnetmask__c.field-meta.xml
<CustomField>
    <fullName>Subnetmask__c</fullName>
    <label>Subnetmask</label>
    <length>255</length>
    <type>Text</type>
</CustomField>